--- a/css/index.css
+++ b/css/index.css
@@ -1,4 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@200;400&display=swap');@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@200&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@200;400&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@200&display=swap');
 
 *{
     margin: 0;
@@ -68,7 +69,7 @@ main::after{
 
 /* estilos header */
 
-header{
+/* header{
     display: flex;
     align-items: center;
     justify-content: space-around;
@@ -97,7 +98,7 @@ header picture{
 a{  
     text-decoration: none;
     color: black;
-}
+} */
 
 
 /* .navegador {
@@ -142,7 +143,7 @@ p{
     font-size: 1em;
 }
 
-.textoInicial{
+/* .textoInicial{
     display: flex;
     justify-content: center;
     text-align: center;
@@ -150,7 +151,7 @@ p{
     margin-right: auto;
     padding: 1rem;
     width: 50%;
-}
+} */
 
 form{
     display: flex;
@@ -166,14 +167,11 @@ form{
     background-color: white;
 }
 
-footer{
-    /* display: flex;
-    align-items: center;
-    justify-content: space-around; */
+/* footer{
     background-color: #394ab9;
     color: rgb(0, 0, 0);
     height: 3rem;
-}
+} */
 
 
 .listaProductos{
