--- a/css/index.css
+++ b/css/index.css
@@ -1,7 +1,7 @@
-@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@200;400&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@200&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@200;400&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@200&display=swap'); */
 
-*{
+/* *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -9,7 +9,7 @@
 
 html{
     font-size: 62,5%;
-}
+} */
 
 /* fondo de la pagina */
 
@@ -21,12 +21,12 @@ html{
     min-width: 100vh;
 } */
 
-main{
+/* main{
     margin-top: 1rem;
     margin-bottom: 1rem;
-}
+} */
 
-main::after{
+/* main::after{
     content: "";
     background-image: url(../Multimedia/brackground.jpg);
     background-size: cover;
@@ -37,9 +37,9 @@ main::after{
     opacity: .2;
     position: fixed;
     z-index: -1;
-}
+} */
 
-.mainNosotros{
+/* .mainNosotros{
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: repeat(2, 1fr);
@@ -64,7 +64,7 @@ main::after{
     width: 20vh;
     height: 20vh;
 
-}
+} */
 
 
 /* estilos header */
@@ -125,7 +125,7 @@ a{
     background-color: #111;
 } */
 
-h1{
+/* h1{
     text-align: center;
     font-family: 'Nunito Sans', sans-serif;
     font-stretch: narrower;
@@ -141,7 +141,7 @@ h2{
 p{
     font-family: 'Nunito Sans', sans-serif;
     font-size: 1em;
-}
+} */
 
 /* .textoInicial{
     display: flex;
@@ -153,7 +153,7 @@ p{
     width: 50%;
 } */
 
-form{
+/* form{
     display: flex;
     justify-content: center;
 }
@@ -165,7 +165,7 @@ form{
     border-radius: 1rem;
     box-shadow: 2px 2px 15px black;
     background-color: white;
-}
+} */
 
 /* footer{
     background-color: #394ab9;
@@ -174,34 +174,34 @@ form{
 } */
 
 
-.listaProductos{
+/* .listaProductos{
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: space-evenly;
     text-align: center;
     flex: 1 1;
-}
+} */
 
 /* .productos{
     width: 100vw;
     height: 100vh;
 } */
 
-.productos{
+/* .productos{
     display: flex;
     flex-direction: row;
     gap: 1rem;
-}
+} */
 
-.listaProductos img{
+/* .listaProductos img{
     margin: 2px;
     margin: 10 10 10px;
     border-radius: 10px 10px 10px 10px;
     border: 2px solid black;
-}
+} */
 
-@media screen and (max-width: 480px) {
+/* @media screen and (max-width: 480px) {
 
     footer {
         flex-direction: column;
@@ -210,8 +210,8 @@ form{
     .textoInicial{
         width: 90%;
     }
-}
+} */
 
-p{
+/* p{
     margin: 0;
-}
+} */
