--- a/css/translated.css
+++ b/css/translated.css
@@ -1,3 +1,45 @@
+@import url("https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@200;400&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@200&display=swap");
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box; }
+
+html {
+  font-size: 62,5%; }
+
+main {
+  margin-top: 1rem;
+  margin-bottom: 1rem; }
+
+main::after {
+  content: "";
+  background-image: url(../Multimedia/brackground.jpg);
+  background-size: cover;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  opacity: .2;
+  position: fixed;
+  z-index: -1; }
+
+h1 {
+  text-align: center;
+  font-family: 'Nunito Sans', sans-serif;
+  font-stretch: narrower;
+  font-size: 4em; }
+
+h2 {
+  text-align: center;
+  font-family: 'Nunito Sans', sans-serif;
+  font-size: 2em; }
+
+p {
+  font-family: 'Nunito Sans', sans-serif;
+  font-size: 1em;
+  margin: 0; }
+
 header {
   display: flex;
   align-items: center;
@@ -6,8 +48,11 @@ header {
   header picture {
     flex-basis: 40%; }
   header .navbar-nav a:hover {
-    background-color: black;
-    color: white; }
+    background-color: #6174ee;
+    color: white;
+    border-radius: 1rem 1rem 1rem 1rem;
+    padding: .3rem;
+    transform: scale(1.2); }
 
 .navbar-nav {
   flex-basis: 60%;
@@ -24,7 +69,16 @@ a {
 footer {
   background-color: #394ab9;
   color: black;
-  height: 3rem; }
+  height: 3rem;
+  width: 100%;
+  position: absolute;
+  bottom: 0;
+  left: 0; }
+
+@media screen and (max-width: 550px) {
+  footer {
+    flex-direction: column;
+    height: fit-content; } }
 
 .textoInicial {
   display: flex;
@@ -34,3 +88,60 @@ footer {
   margin-right: auto;
   padding: 1rem;
   width: 50%; }
+
+@media screen and (max-width: 480px) {
+  .textoInicial {
+    width: 90%; } }
+
+form {
+  display: flex;
+  justify-content: center; }
+
+.contenedorFormulario {
+  padding: 1rem;
+  height: 50vh;
+  width: 50vh;
+  border-radius: 1rem;
+  box-shadow: 2px 2px 15px black;
+  background-color: white; }
+
+.mainNosotros {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(2, 1fr);
+  gap: 1rem; }
+
+.mainNosotros p {
+  grid-column: 1 / 2;
+  grid-row: 1 / 3; }
+
+.mainNosotros__img:nth-of-type(1) {
+  grid-column: 2 / 3; }
+
+.mainNosotros__img:nth-of-type(2) {
+  grid-column: 2 / 3;
+  grid-row: 2 / 3; }
+
+.marcas img {
+  width: 20vh;
+  height: 20vh; }
+
+.listaProductos {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  text-align: center;
+  flex: 1 1; }
+  .listaProductos img {
+    margin: 2px;
+    margin: 10 10 10px;
+    border-radius: 1rem 1rem 1rem 1rem;
+    border: .1rem solid gray; }
+
+.productos {
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  flex-direction: row;
+  gap: 1rem; }
