--- a/sass/index.scss
+++ b/sass/index.scss
@@ -1,6 +1,15 @@
+@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@200;400&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@200&display=swap');
+
 @import './misc/variables';
+@import './misc/normalize';
+@import './misc/animations';
 
 @import './partials/header';
 @import './partials/footer';
 
 @import './views/home';
+@import './views/contactanos';
+@import './views/nosotros';
+@import './views/productos';
+@import './views/visitanos';
