--- a/sass/partials/_footer.scss
+++ b/sass/partials/_footer.scss
@@ -2,4 +2,16 @@ footer{
     background-color: map-get($colors, primary);
     color: rgb(0, 0, 0);
     height: 3rem;
+    width:100%; 
+    position:absolute; 
+    bottom:0; 
+    left:0; 
+}
+
+@media screen and (max-width: 550px) {
+
+    footer {
+        flex-direction: column;
+        height: fit-content;
+    }
 }
