--- a/css/translated.css
+++ b/css/translated.css
@@ -5,6 +5,11 @@
   padding: 0;
   box-sizing: border-box; }
 
+body {
+  display: grid;
+  grid-template-rows: auto 1fr 20vh;
+  min-height: 100vh; }
+
 html {
   font-size: 62,5%; }
 
@@ -28,17 +33,20 @@ h1 {
   text-align: center;
   font-family: 'Nunito Sans', sans-serif;
   font-stretch: narrower;
-  font-size: 4em; }
+  font-size: 4.5em; }
 
 h2 {
   text-align: center;
   font-family: 'Nunito Sans', sans-serif;
-  font-size: 2em; }
+  font-size: 2.5em; }
 
 p {
   font-family: 'Nunito Sans', sans-serif;
-  font-size: 1em;
+  font-size: 1.5em;
   margin: 0; }
+
+ul {
+  padding-left: 0; }
 
 header {
   display: flex;
@@ -70,10 +78,9 @@ footer {
   background-color: #394ab9;
   color: black;
   height: 3rem;
-  width: 100%;
-  position: absolute;
+  position: fixed;
   bottom: 0;
-  left: 0; }
+  width: 100%; }
 
 @media screen and (max-width: 550px) {
   footer {
@@ -112,11 +119,13 @@ form {
   gap: 1rem; }
 
 .mainNosotros p {
+  text-align: center justify;
   grid-column: 1 / 2;
   grid-row: 1 / 3; }
 
 .mainNosotros__img:nth-of-type(1) {
-  grid-column: 2 / 3; }
+  grid-column: 0 / 1;
+  grid-row: 0 / 2; }
 
 .mainNosotros__img:nth-of-type(2) {
   grid-column: 2 / 3;
@@ -125,6 +134,10 @@ form {
 .marcas img {
   width: 20vh;
   height: 20vh; }
+
+@media screen and (max-width: 1024px) {
+  p {
+    font-size: 1em; } }
 
 .listaProductos {
   display: flex;
