--- a/sass/misc/_normalize.scss
+++ b/sass/misc/_normalize.scss
@@ -4,6 +4,12 @@
     box-sizing: border-box;
 }
 
+body{
+    display: grid;
+    grid-template-rows: auto 1fr 20vh;
+    min-height: 100vh;
+}
+
 html{
     font-size: 62,5%;
 }
@@ -30,17 +36,21 @@ h1{
     text-align: center;
     font-family: 'Nunito Sans', sans-serif;
     font-stretch: narrower;
-    font-size: 4em;
+    font-size: 4.5em;
 }
 
 h2{
     text-align: center;
     font-family: 'Nunito Sans', sans-serif;
-    font-size: 2em;
+    font-size: 2.5em;
 }
 
 p{
     font-family: 'Nunito Sans', sans-serif;
-    font-size: 1em;
+    font-size: 1.5em;
     margin: 0;
+}
+
+ul{
+    padding-left: 0;
 }
