--- a/sass/partials/_footer.scss
+++ b/sass/partials/_footer.scss
@@ -2,10 +2,9 @@ footer{
     background-color: map-get($colors, primary);
     color: rgb(0, 0, 0);
     height: 3rem;
-    width:100%; 
-    position:absolute; 
-    bottom:0; 
-    left:0; 
+    position: fixed;
+    bottom: 0;
+    width: 100%;
 }
 
 @media screen and (max-width: 550px) {
