--- a/sass/views/_nosotros.scss
+++ b/sass/views/_nosotros.scss
@@ -6,12 +6,14 @@
 }
 
 .mainNosotros p{
+    text-align: center justify;
     grid-column: 1 / 2;
     grid-row: 1 / 3;
 }
 
 .mainNosotros__img:nth-of-type(1) {
-    grid-column: 2 / 3;
+    grid-column: 0 / 1;
+    grid-row: 0 / 2;
 }
 
 .mainNosotros__img:nth-of-type(2) {
@@ -23,4 +25,11 @@
     width: 20vh;
     height: 20vh;
 
+}
+
+@media screen and (max-width: 1024px) {
+
+    p {
+        font-size: 1em;
+    }
 }
